--- a/dev/less/ui.less
+++ b/dev/less/ui.less
@@ -97,14 +97,13 @@
 }
 
 .nav-open {
-    .page-wrapper {
-        transform: translate3d(-@nav-width, 0, 0);
-    }
     .page-nav {
         transform: translate3D(0, 0, 0);
     }
+    .page-wrapper,
     .hamburger,
-    .to-top {
+    .to-top,
+    .page-footer {
         transform: translate3d(-@nav-width, 0, 0);
     }
     .hamburger {
